Nav clicks handle smooth scrolling to sections if width > 768.  Ditched duplicate baked text panels.  Layout same for 480 -> 768 now.  layout in that range too complicated for now.  Removing old replaced elements fixed loads of layout issues.

--- a/assets/html5/style.css
+++ b/assets/html5/style.css
@@ -65,6 +65,14 @@ ul.nav li {
 	font-weight: bold;
 }
 
+/* styles that apply over 640px */
+@media (max-width: 40em) {
+	ul.nav li {
+		width: 100% !important;
+	}
+}
+
+
 .text-center,
 h1, h2, h3 {
 	text-align: center;
@@ -196,12 +204,10 @@ dt, dd {
 	margin: 1em 0;
 }
 
-/*
-
-.panel	.atmos
-				.text-wrapper
-
-*/
+/* styles that apply over 640px */
+@media (min-width: 40em) {
+	
+}
 
 /* styles that apply under 480px */
 @media (max-width: 480px) {
@@ -219,16 +225,16 @@ dt, dd {
 /* styles that apply over 480px */
 @media (min-width: 480px) {
 
-	.sketch {position: relative;}
-
 	.panel .page,
 	.panel .caption,
 	.panel .text {
 		line-height: 1.5em;
-		/* overflow: auto; */
-		max-width: 740px;
 		margin: 0 auto;
 	}
+
+	/*
+	.sketch {position: relative;}
+
 	.panel .caption {
 		bottom: 10%;
 	}
@@ -265,7 +271,6 @@ dt, dd {
 	.panel.mask .image + .text-wrapper {
 		background-image: url(../img/text-bg-mask.png);
 		background-repeat: repeat-x;
-		/* background-position: 0 20%; */
 		background-size: cover;
 	}
 
@@ -331,6 +336,7 @@ dt, dd {
 	.subject {
 		text-indent: -9999em;
 	}
+	*/
 
 }
 
@@ -345,10 +351,43 @@ dt, dd {
 /* styles that apply over 768px */
 @media (min-width: 769px) {
 
+	.panel .caption {
+		bottom: 10%;
+	}
+	.panel .caption.left {
+		left: 30%;
+	}
+	.panel .caption.top {
+		top: 10%;
+		bottom: initial;
+	}
+	
+	.panel .text-wrapper {
+		width: 100%;
+		height: 100%;
+		position: relative;
+	}
+	.panel .text-wrapper:first-child {
+		padding-top: 6em;
+	}
+	.panel .text-wrapper:last-child {
+		padding-bottom: 6em;
+	}
+
+	/* sits top left of parent panel */
+	.panel .atmos + .text-wrapper,
+	.panel .image + .text-wrapper {
+		position: absolute;
+		left: 0;
+		top: 0;
+	}
+	
 	.sequence .panel .caption,
 	.enhanced .text,
 	.panel .atmos + .text-wrapper .text,
 	.panel .image + .text-wrapper .text {
+		position: absolute;
+		left: 50%;
 		margin-left: -360px;
 		max-width: 740px;
 		width: 100%;
@@ -366,14 +405,12 @@ dt, dd {
 	.panel.enhanced {
 		width: 100%;
 		height: 100%;
-		/* position: relative; */
 		position: fixed;
 	}
 	
 	.panel.enhanced .text-wrapper,
 	.panel.enhanced .image,
 	.panel.enhanced .atmos {
-		/* position: absolute; */
 		position: fixed;
 		width: 100%;
 		left: 0;
@@ -381,6 +418,30 @@ dt, dd {
 		padding: initial;
 	}
 
+	.enhanced .text,
+	.panel .atmos + .text-wrapper .text,
+	.panel .image + .text-wrapper .text {
+		top: 40%;
+	}
+	
+	.enhanced .text.top,
+	.panel .atmos + .text-wrapper .text.top,
+	.panel .image + .text-wrapper .text.top {
+		top: 25%;
+	}
+
+	.enhanced.mask .text-wrapper,
+	.panel.mask .atmos + .text-wrapper,
+	.panel.mask .image + .text-wrapper {
+		background-image: url(../img/text-bg-mask.png);
+		background-repeat: repeat-x;
+		background-size: cover;
+	}
+
+	.enhanced.mask .text-wrapper {
+		position: fixed !important;
+	}
+	
 	dt span, dd span {
 		display: none;
 	}
